kubernetes/ingress/restaurante-ingress.yaml
#Define cómo acceder a la aplicación desde fuera del cluster

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurante-ingress
  namespace: restaurante
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: search
                port:
                  number: 80
